src/code-blocks/components/Pre.css
pre > code {
  /*
  background-color: #f4f4f4;
  0.043137255 = 1 - (#f4 / #ff)
  */
  background: rgba(0, 0, 0, 0.043137255);
  font-size: 1em;
}

/* Copy button */
pre {
  &:has(.copy-button) {
    position: relative;
  }

  .copy-button {
    position: absolute !important;
    top: 10px;
    right: 10px;
    z-index: 3;
    margin: 0;
    height: 25px;
    width: 30px;
    background-color: #f7f7f7;
    transition: background-color 0.4s ease-in-out;

    &:not(:hover) {
      background-color: #eee;
    }

    & svg {
      width: 15px;
      height: 100%;
      fill: none;
      stroke-linecap: round;
      stroke-linejoin: round;
    }
  }
}

/* Workaround for shiki regression */
pre > code:not([data-language]) {
  padding: 16px !important;
}

